--- a/app/src/main/res/layout/step_skill_set_social.xml
+++ b/app/src/main/res/layout/step_skill_set_social.xml
@@ -1,112 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:orientation="vertical">
 
-    <LinearLayout
-        android:orientation="vertical"
+    <TextView
+        android:id="@+id/txtSocialSkillsTitle"
+        style="@style/style_text_card_title"
+        android:text="@string/cat_social"
+        android:visibility="gone"/>
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/spacing_normal"
+        android:layout_marginStart="@dimen/spacing_normal"
+        android:background="@drawable/bkgd_cat_panel"
+        android:paddingBottom="@dimen/spacing_half"
+        android:paddingTop="@dimen/spacing_half">
 
-        <TextView
-            android:id="@+id/txtSocialSkillsTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/spacing_normal"
-            android:layout_gravity="center"
-            android:text="@string/cat_social"
-            android:textStyle="bold"/>
-
-        <RelativeLayout
+        <view
+            android:id="@+id/valueSetterAnimalKen"
+            class="com.emi.nwodcombat.widgets.ValueSetter"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="@dimen/spacing_half"
-            android:paddingBottom="@dimen/spacing_half"
-            android:layout_marginStart="@dimen/spacing_normal"
-            android:layout_marginEnd="@dimen/spacing_normal"
-            android:background="@drawable/bkgd_cat_panel">
+            app:traitCategory="@string/cat_social"
+            app:valueName="@string/skill_animal_ken"
+            />
 
-            <view
-                class="com.emi.nwodcombat.widgets.ValueSetter"
-                android:id="@+id/valueSetterAnimalKen"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:valueName="@string/skill_animal_ken"
-                app:traitCategory="@string/cat_social"
-                />
+        <view
+            android:id="@+id/valueSetterEmpathy"
+            class="com.emi.nwodcombat.widgets.ValueSetter"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/valueSetterAnimalKen"
+            app:traitCategory="@string/cat_social"
+            app:valueName="@string/skill_empathy"
+            />
 
-            <view
-                class="com.emi.nwodcombat.widgets.ValueSetter"
-                android:id="@+id/valueSetterEmpathy"
-                android:layout_below="@id/valueSetterAnimalKen"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:valueName="@string/skill_empathy"
-                app:traitCategory="@string/cat_social"
-                />
+        <view
+            android:id="@+id/valueSetterExpression"
+            class="com.emi.nwodcombat.widgets.ValueSetter"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/valueSetterEmpathy"
+            app:traitCategory="@string/cat_social"
+            app:valueName="@string/skill_expression"
+            />
 
-            <view
-                class="com.emi.nwodcombat.widgets.ValueSetter"
-                android:id="@+id/valueSetterExpression"
-                android:layout_below="@id/valueSetterEmpathy"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:valueName="@string/skill_expression"
-                app:traitCategory="@string/cat_social"
-                />
+        <view
+            android:id="@+id/valueSetterIntimidation"
+            class="com.emi.nwodcombat.widgets.ValueSetter"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/valueSetterExpression"
+            app:traitCategory="@string/cat_social"
+            app:valueName="@string/skill_intimidation"
+            />
 
-            <view
-                class="com.emi.nwodcombat.widgets.ValueSetter"
-                android:id="@+id/valueSetterIntimidation"
-                android:layout_below="@id/valueSetterExpression"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:valueName="@string/skill_intimidation"
-                app:traitCategory="@string/cat_social"
-                />
+        <view
+            android:id="@+id/valueSetterPersuasion"
+            class="com.emi.nwodcombat.widgets.ValueSetter"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/valueSetterIntimidation"
+            app:traitCategory="@string/cat_social"
+            app:valueName="@string/skill_persuasion"
+            />
 
-            <view
-                class="com.emi.nwodcombat.widgets.ValueSetter"
-                android:id="@+id/valueSetterPersuasion"
-                android:layout_below="@id/valueSetterIntimidation"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:valueName="@string/skill_persuasion"
-                app:traitCategory="@string/cat_social"
-                />
+        <view
+            android:id="@+id/valueSetterSocialize"
+            class="com.emi.nwodcombat.widgets.ValueSetter"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/valueSetterPersuasion"
+            app:traitCategory="@string/cat_social"
+            app:valueName="@string/skill_socialize"
+            />
 
-            <view
-                class="com.emi.nwodcombat.widgets.ValueSetter"
-                android:id="@+id/valueSetterSocialize"
-                android:layout_below="@id/valueSetterPersuasion"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:valueName="@string/skill_socialize"
-                app:traitCategory="@string/cat_social"
-                />
+        <view
+            android:id="@+id/valueSetterStreetwise"
+            class="com.emi.nwodcombat.widgets.ValueSetter"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/valueSetterSocialize"
+            app:traitCategory="@string/cat_social"
+            app:valueName="@string/skill_streetwise"
+            />
 
-            <view
-                class="com.emi.nwodcombat.widgets.ValueSetter"
-                android:id="@+id/valueSetterStreetwise"
-                android:layout_below="@id/valueSetterSocialize"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:valueName="@string/skill_streetwise"
-                app:traitCategory="@string/cat_social"
-                />
+        <view
+            android:id="@+id/valueSetterSubterfuge"
+            class="com.emi.nwodcombat.widgets.ValueSetter"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/valueSetterStreetwise"
+            app:traitCategory="@string/cat_social"
+            app:valueName="@string/skill_subterfuge"
+            />
 
-            <view
-                class="com.emi.nwodcombat.widgets.ValueSetter"
-                android:id="@+id/valueSetterSubterfuge"
-                android:layout_below="@id/valueSetterStreetwise"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:valueName="@string/skill_subterfuge"
-                app:traitCategory="@string/cat_social"
-                />
-
-        </RelativeLayout>
-    </LinearLayout>
-</ScrollView>
+    </RelativeLayout>
+</LinearLayout>
