--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -6,12 +6,8 @@
               android:layout_height="match_parent">
 
     <android.support.v7.widget.CardView
-        android:layout_margin="@dimen/spacing_normal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/darker_gray"
         app:cardCornerRadius="@dimen/spacing_half"
-        >
+        style="@style/style_card_view">
 
         <LinearLayout
             android:orientation="vertical"
