--- a/app/src/main/res/layout/step_personal_info.xml
+++ b/app/src/main/res/layout/step_personal_info.xml
@@ -11,11 +11,8 @@
         android:orientation="vertical">
 
         <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/spacing_normal"
-            android:background="@android:color/darker_gray"
-            app:cardCornerRadius="@dimen/spacing_half">
+            style="@style/style_card_view">
+            <!--app:cardCornerRadius="@dimen/spacing_half"-->
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -48,11 +45,8 @@
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/spacing_normal"
-            android:background="@android:color/darker_gray"
-            app:cardCornerRadius="@dimen/spacing_half">
+            app:cardCornerRadius="@dimen/spacing_half"
+            style="@style/style_card_view">
 
             <LinearLayout
                 android:layout_width="match_parent"
