--- a/app/src/main/res/layout/step_summary.xml
+++ b/app/src/main/res/layout/step_summary.xml
@@ -12,13 +12,9 @@
 
         <TextView
             android:id="@+id/txtAttributes"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/spacing_normal"
-            android:layout_gravity="center"
             android:text="@string/title_attributes"
             android:textAllCaps="true"
-            android:textStyle="bold"/>
+            style="@style/style_text_card_title"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -113,13 +109,9 @@
 
         <TextView
             android:id="@+id/txtSkills"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/spacing_normal"
-            android:layout_gravity="center"
             android:text="@string/title_skills"
             android:textAllCaps="true"
-            android:textStyle="bold"/>
+            style="@style/style_text_card_title"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -214,13 +206,9 @@
 
         <TextView
             android:id="@+id/txtDerivedTraits"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/spacing_normal"
-            android:layout_gravity="center"
             android:text="@string/title_traits_derived"
             android:textAllCaps="true"
-            android:textStyle="bold"/>
+            style="@style/style_text_card_title"/>
 
         <LinearLayout
             android:layout_width="match_parent"
